# capability-synthesis-protocol

./: .gitignore  ARCHITECTURE.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
algoviz/: README.md
algoviz/backend/: csp_app.py  graph.py
algoviz/backend/planner/capabilities/: visualize_bubble_sort.py  visualize_quick_sort.json  visualize_quick_sort.py
algoviz/frontend/: index.html
algoviz/frontend/src/: App.css  App.jsx
csp/: __init__.py
csp/adapters/: __init__.py  langgraph.py
csp/client/: PYPROJECT.toml  __init__.py  base.py  client.py  session.py  transport.py  types.py
csp/llm/: __init__.py  anthropic.py  base.py
csp/orchestrator/: __init__.py  borrow.py  capability.py  credentials.py  elicitation.py  executor.py  planner.py  planner_store.py  registry.py  repair.py  sandbox.py  selection.py  server.py  synthesizer.py
examples/: Makefile  langgraph_integration.py
examples/algoviz/: .gitignore
examples/algoviz/backend/: app.py  graph.py
examples/algoviz/backend/planner/: .gitignore
examples/algoviz/backend/planner/capabilities/: visualize_backpropagation.json  visualize_backpropagation.py  visualize_breadth_first_search.json  visualize_breadth_first_search.py  visualize_bubble_sort.json  visualize_gradient_descent.json  visualize_gradient_descent.py  visualize_q_learning.json  visualize_q_learning.py
examples/algoviz/frontend/: package-lock.json  package.json  vite.config.js
examples/helloworld/: .gitignore  README.md
examples/helloworld/backend/: test_reuse.py
examples/helloworld/backend/planner/capabilities/: aggregate_table.json  aggregate_table.py  plot_chart.json  plot_chart.py
examples/helloworld/frontend/: vite.config.js
examples/helloworld/frontend/.claude/: launch.json
examples/helloworld/frontend/src/: Architecture.css  Architecture.jsx
examples/helloworld/sample_data/: employees.csv
examples/montage-ai/backend/: app.py
examples/montage-ai/backend/planner/capabilities/: london_weather_app_display.json  london_weather_app_display.py  mobile_login_screen.json  mobile_login_screen.py  weather_app_with_city_selector.json  weather_app_with_city_selector.py
examples/montage-ai/frontend/: index.html  package-lock.json  package.json  vite.config.js
examples/montage-ai/frontend/src/: App.css  App.jsx
examples/pitch/backend/: app.py  csp_app.py
examples/pitch/backend/planner/capabilities/: fetch_standings.json  fetch_standings.py  predict_match_outcome.json  predict_match_outcome.py
examples/pitch/frontend/: index.html  package-lock.json  package.json  vite.config.js
examples/pitch/frontend/src/: App.css  App.jsx
examples/scripts/: run.sh
helloworld/: README.md
helloworld/backend/: app.py  csp_app.py  embeddings.py  rag_store.py
helloworld/backend/planner/capabilities/: average_salary_by_department.json  average_salary_by_department.py  correlation_between_age_and_salary.json  correlation_between_age_and_salary.py  correlation_heatmap.json  correlation_heatmap.py  count_employees_by_city.json  count_employees_by_city.py  plot_regulatory_score_distribution.json  plot_regulatory_score_distribution.py
helloworld/frontend/: index.html  package-lock.json  package.json
helloworld/frontend/src/: App.css  App.jsx  Architecture.jsx
tests/: test_csp.py  test_repair.py  test_selection.py
