[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csp-sdk"
version = "0.1b0"
description = "Capability Synthesis Protocol — build AI orchestrators that plan, execute, and synthesize capabilities at runtime."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "alidaho" }]
keywords = ["ai", "llm", "orchestration", "mcp", "agents", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
# Framework adapters — install only what you use:
#   uv pip install "csp-sdk[langgraph]"   (or: pip install ...)
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

# Dev tooling lives in a uv dependency group — not shipped to PyPI, not an extra.
#   uv sync            → lib + this group (default)
#   uv sync --no-dev   → runtime deps only
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hatchling",
]

[project.urls]
Homepage = "https://github.com/ldbtech/capability-synthesis-protocol"
Repository = "https://github.com/ldbtech/capability-synthesis-protocol"
Issues = "https://github.com/ldbtech/capability-synthesis-protocol/issues"

# Only the importable library ships in the distributions — the demo apps
# (helloworld/, algoviz/), tests, and examples are excluded.
[tool.hatch.build.targets.wheel]
packages = ["csp"]

[tool.hatch.build.targets.sdist]
# only-include is a strict whitelist — keeps examples/, tests/, node_modules,
# credentials, and dist/ out of the published source distribution.
only-include = [
    "csp",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
